# TemplateDB

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  index.html  manifest.webmanifest  package-lock.json  package.json  robots.txt  rust-toolchain  rust-toolchain.toml  service-worker.js  service-worker.js.map  sitemap.xml  slides.html
src/client/: Cargo.toml
src/client/src/: lib.rs  storeclient.rs
src/client/src/cmd/: mod.rs  templatekv.rs
src/client/src/engine_client/: bucket.rs  bulkload.rs  engine.rs  mod.rs  sstbuilder.rs  tenant.rs
src/client/src/runtime_client/: engine.rs  mod.rs  stream.rs  tenant.rs
src/engine/: Cargo.toml  build.rs
src/engine/arrow/: Cargo.toml
src/engine/arrow/src/: collection.rs  database.rs  error.rs  lib.rs
src/engine/hash/: Cargo.toml
src/engine/hash/src/: codec.rs  engine.rs  error.rs  lib.rs  memtable.rs  table_builder.rs  table_reader.rs
src/engine/proto/: bucket.proto  ingest.proto  manifest.proto  memtable.proto  node.proto  tenant.proto
src/engine/src/: batch.rs  compaction.rs  error.rs  iterator.rs  lib.rs  logger.rs  options.rs  storage_impl.rs  table_cache.rs
src/engine/src/bplustree/: Cargo.toml
src/engine/src/bwtree/: data.rs  datapage.rs  env.rs  indexpage.rs  ioutil.rs  iter.rs  map.rs  mod.rs  node.rs  page.rs  pagecache.rs  pageopt.rs  pagetable.rs  sortedpage.rs  stats.rs  tree.rs  util.rs
src/engine/src/cache/: lru.rs  mod.rs
src/engine/src/db/: filename.rs  format.rs  iterator.rs  mod.rs
src/engine/src/file/: mod.rs  store_trait.rs
src/engine/src/filter/: bloom.rs
src/engine/src/lsm/: iterator.rs  manifest.rs  mod.rs  proto.rs  store_trait.rs  version.rs
src/engine/src/mem/: arena.rs  handler.rs  inlineskiplist.rs  memtable_actor.rs  mod.rs  skiplist.rs
src/engine/src/node/: bucket.rs  fs.rs  mod.rs  node.rs  proto.rs  tenant.rs
src/engine/src/record/: mod.rs  reader.rs  writer.rs
src/engine/src/rocksdb/: Cargo.toml
src/engine/src/sstable/: block.rs  filter_block.rs  mod.rs  table.rs
src/engine/src/storage/: file.rs  mem.rs  mod.rs
src/engine/src/util/: coding.rs  reporter.rs  slice.rs  varint.rs
src/engine/src/version/: mod.rs  version_edit.rs  version_set.rs
src/journal/: Cargo.toml  build.rs
src/journal/src/: error.rs  journal.rs  lib.rs  stream.rs
src/journal/src/file/: codec.rs  journal.rs  mod.rs  segment.rs  segment_reader.rs  segment_stream.rs  stream.rs
src/journal/src/grpc/: client.rs  error.rs  journal.proto  journal.rs  mod.rs  proto.rs  server.rs  stream.rs
src/journal/src/mem/: journal.rs  mod.rs
src/kernel/: Cargo.toml  build.rs
src/kernel/src/: error.rs  kernel.rs  kernel_update.rs  lib.rs  metadata.proto  metadata.rs
src/kernel/src/grpc/: client.rs  compose.rs  error.rs  kernel.proto  kernel.rs  mod.rs  proto.rs  server.rs
src/kernel/src/local/: kernel.rs  mod.rs
src/query_engine/: Cargo.toml
src/query_engine/src/: cli.rs  db.rs  lib.rs  main.rs
src/query_engine/src/catalog/: catalog.rs
src/query_engine/src/catalog_v2/: catalog_set.rs
src/query_engine/src/common/: create_info.rs
src/query_engine/src/execution/: column_binding_resolver.rs  expression_executor.rs  mod.rs  physical_plan_generator.rs  util.rs
src/query_engine/src/executor/: array_compute.rs  evaluator.rs  limit.rs  mod.rs  project.rs  table_scan.rs
src/query_engine/src/function/: errors.rs  mod.rs
src/query_engine/src/main_entry/: client_context.rs  db.rs  errors.rs  prepared_statement_data.rs  query_result.rs
src/query_engine/src/optimizer/: input_ref_rewriter.rs
src/query_engine/src/planner/: constants.rs  expression_binder.rs  function_binder.rs  mod.rs
src/query_engine/src/planner_test/: mod.rs
src/query_engine/src/planner_v2/: expression_binder.rs  mod.rs
src/query_engine/src/storage/: csv.rs  local_storage.rs  memory.rs  mod.rs  templatedb.rs
src/query_engine/src/types/: values.rs
src/query_engine/src/types_v2/: types.rs
src/query_engine/src/util/: mod.rs  tree_render.rs
src/runtime/: Cargo.toml  build.rs
src/runtime/examples/: engine.rs  master.rs  store.rs  stream.rs
src/runtime/proto/: actor.proto  manifest.proto  meta.proto  node.proto  store.proto  stream.proto
src/runtime/src/: lib.rs
src/runtime/src/accelerate/: mod.rs
src/runtime/src/allocator/: mod.rs
src/runtime/src/consensus/: abstruct.rs  action.rs  command.rs  commit.rs  error.rs  executor.rs  id.rs  message.rs  mod.rs  node.rs  options.rs  quorum.rs  state.rs  time.rs  util.rs
src/runtime/src/database/: api.rs  error.rs  mod.rs  storage.rs
src/runtime/src/io/: mod.rs
src/runtime/src/network/: mod.rs
src/runtime/src/operators/: mod.rs
src/runtime/src/storage/: fs.rs  mod.rs  server.rs  util.rs
src/runtime/src/stream/: cast.rs  channel.rs  convert.rs  error.rs  mod.rs  node.rs  server.rs  streams.rs  tenant.rs  types.rs
src/runtime/src/stream2/: config.rs  env.rs  mod.rs
src/storage/: Cargo.toml  build.rs
src/storage/src/: error.rs  lib.rs  storage.rs
src/storage/src/file/: bucket.rs  mod.rs  storage.rs
src/storage/src/grpc/: bucket.rs  client.rs  error.rs  mod.rs  proto.rs  server.rs  storage.proto  storage.rs
src/storage/src/mem/: mod.rs  storage.rs
src/storage_engine/: Cargo.toml  build.rs
src/storage_engine/proto/: memtable.proto
src/storage_engine/src/: db_trait.rs  error.rs  lib.rs  logger.rs  options.rs
src/storage_engine/src/cache/: bloom_filter_cache.rs  lru_cache.rs  mod.rs  new_lru_cache.rs  sharded_cache.rs  table_cache.rs
src/storage_engine/src/compaction/: compact.rs
src/storage_engine/src/db_impl/: mod.rs  template_impl.rs
src/storage_engine/src/iterator/: concatenate_iter.rs  db_iter.rs  kmerge_iter.rs  memtable_iter.rs  mod.rs
src/storage_engine/src/manager/: filename.rs  mod.rs  snapshot.rs  version.rs  version_edit.rs  version_set.rs
src/storage_engine/src/memtable/: arena.rs  batch.rs  inlineskiplist.rs  key_format.rs  memtable.rs  mod.rs  skiplist.rs  (+1 more)
tests/sql_planner/: Cargo.toml
tests/sql_planner/src/: lib.rs  main.rs
tests/sql_planner/tests/: sql_planner.rs
(+599 files in other folders)
