[workspace]
members = [ 
    "src/storage_engine", 
    "src/runtime",
    "src/util/pro-macro",
    "src/query_engine",
    # "tests/sql_logic",
    "tests/sql_planner",
]

resolver = "2"

[workspace.dependencies]
workspace-hack = "0.1.0"

# make backtrace + color-eyre faster on debug builds
[profile.dev.package.backtrace]
opt-level = 3
