[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = {version = "0.1", path = "../runtime"}
engine = {version = "0.1", path = "../engine"}
tonic = "0.8.0"
futures = "0.3.21"
async-trait = "0.1.56"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
tempfile = "3.3.0"
derivative = "2.2.0"
tracing = "0.1.36"