[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
tonic = "0.8.0"
prost = "0.11.0"
async-trait = "0.1.56"
crc = "3.0.0"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
bytes = "1.2.1"
uuid = { version = "1.1.2", features = ["v4"] }
bitflags = "1.3.2"
jemallocator = "0.5.0"
crossbeam = "0.8.2"
bumpalo = { version = "3.11.1", features = ["collections"] }

[build-dependencies]
tonic-build = "0.8.0"