[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
bytes = "0.5.6"
crc32fast = "1.2.1"
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
fs2 = "0.4.3"
fxhash = "0.2.1"
log = "0.4.6"
num-derive = "0.3"
num-traits = "0.2"
quick-error = "1.2.3"
rand = "0.7.2"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.5.0"
snap = "1.0.0"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
crossbeam = "0.8.2"
bumpalo = "3.11.1"
jemallocator = "0.5.0"
bitflags = "1.3.2"

[build-dependencies]
tonic-build = "0.8.0"