[package]
name = "query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
arrow = { version = "50.0.0", features = ["prettyprint"] }
arrow-ord = "50.0.0"
tokio = { version = "1.36.0", features = ["full"] }
futures-async-stream = "0.2.10"
futures = "0.3.30"
thiserror = "1.0.57"
sqlparser = { version = "0.44.0", features = ["serde"] }
itertools = "0.12.1"
downcast-rs = "1.2.0"
paste = "1.0.14"
rustyline = "14.0.0"
dirs = "5.0.1"
ahash = { version = "0.8.11", default-features = false, features = ["runtime-rng"] }
petgraph = "0.6.4"
enum_dispatch = "0.3.12"
lazy_static = "1.4.0"
strum = "0.26.1"
strum_macros = "0.26.1"
ordered-float = "4.2.0"
derive-new = "0.6.0"
log = "0.4.21"
env_logger = "0.11.3"
derive_builder = "0.20.0"
async-stream = "0.3.5"

[dev-dependencies]
test-case = "2"
pretty_assertions = "1.4.0"