[package]
name = "runtime"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://arrowkv.io"
repository = "https://github.com/devillove084/arrowkv"
description = "The arrowkv asynchronous runtime."

[dependencies]
futures = "0.3.19"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
