[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
bincode = "1.3.3"
env_logger = "0.9.0"
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.17"
mockall = "0.11.1"
petgraph = "0.6.2"
proc-macro2 = "1.0.40"
quote = "1.0.20"
serde = {version = "1.0.138", features = ["derive"]}
syn = "1.0.98"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
yaml-rust = "0.4.5"
pro-macro = {path = "../util/pro-macro"}
derivative = "2.2.0"
prost = "0.11.0"
tonic = "0.8.0"

[dev-dependencies]
clap = { version = "3.2.16", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.0"