[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { git = "https://github.com/devillove084/actix.git" }
bytes = "1.5.0"
async-trait = "0.1.77"
bincode = "1.3.3"
env_logger = "0.11.3"
futures = "0.3.30"
itertools = "0.12.1"
log = "0.4.21"
mockall = "0.12.1"
petgraph = "0.6.4"
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = {version = "1.0.197", features = ["derive"]}
syn = "2.0.52"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
yaml-rust = "0.4.5"
pro-macro = {path = "../util/pro-macro"}
derivative = "2.2.0"
prost = "0.12.3"
tonic = "0.11.0"
crc32fast = "1.4.0"
libc = "0.2.153"
tempfile = "3.10.1"
anyerror = "0.1.12"
tracing = "0.1.40"
storage_engine = { path = "../storage_engine"}
[dev-dependencies]
clap = { version = "4.5.2", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"
