[package]
name = "storage"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://arrowkv.io"
repository = "https://github.com/devillove084/arrowkv"
description = "An arrowkv module that provides object storage abstractions and implementations."

[dependencies]
runtime = { version = "0.4.0", path = "../runtime" }
thiserror = "1.0"
async-trait = "0.1"
bytes = "1.1.0"
tokio = { version = "1.13", features = ["full"] }
prost = "0.9"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.6"
