[package]
name = "storage_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { git = "https://github.com/devillove084/actix.git" }
arrow = { version = "50.0.0", features = ["prettyprint"] }
arrow-ord = "50.0.0"
async-trait = "0.1.56"
futures = "0.3.29"
crc32fast = "1.2.1"
crossbeam-channel = "0.4.0"
crossbeam-utils = "0.7.0"
fs2 = "0.4.3"
fxhash = "0.2.1"
log = "0.4.20"
num-derive = "0.4.2"
num-traits = "0.2.18"
quick-error = "1.2.3"
rand = "0.7.2"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.5.0"
snap = "1.0.0"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
crossbeam = "0.8.2"
bumpalo = "3.11.1"
bitflags = "1.3.2"
tonic = "0.8.0"
bytes = "1.5.0"
prost = "0.11.0"
blink-alloc = "0.3.1"
moka = { version = "0.12.5", features = ["future"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
tonic-build = "0.8.0"

[[bin]]
name = "memtable"
path = "src/bin/mem.rs"
