[package]
name = "hash-engine"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://arrowkv.io"
repository = "https://github.com/devillove084/arrowkv"
description = "An arrowkv engine that provides simple key-value storage."

[dependencies]
kernel = { version = "0.4.0", path = "../../kernel" }
journal = { version = "0.4.0", path = "../../journal" }
storage = { version = "0.4.0", path = "../../storage" }

thiserror = "1.0"
tokio = { version = "1.14", features = ["full"] }
bytes = "1.1"
futures = "0.3"
